Fri Dec 21 03:24:37 GMT 2012  Olly Betts <olly@survex.com>

	* common/replicate_utils.cc: Make posixy_open() always use O_BINARY.
	* backends/brass/brass_btreebase.cc,backends/brass/brass_database.cc,
	  backends/brass/brass_databasereplicator.cc,
	  backends/chert/chert_btreebase.cc,
	  backends/chert/chert_databasereplicator.cc,common/posixy_wrapper.cc:
	  Don't pass O_BINARY to posixy_open() in the places where we were
	  (which wasn't everywhere, probably causing replication bugs under
	  __WIN32__).

Fri Dec 21 02:57:56 GMT 2012  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc,net/remoteconnection.h: Only "outline"
	  RemoteConnection dtor under __WIN32__.

Fri Dec 21 02:56:28 GMT 2012  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc: Make the UnimplementedError for a
	  MatchSpy which doesn't implement name() clearer that it's this
	  particular subclass which can't be used remotely, not all MatchSpy
	  objects.

Thu Dec 20 22:27:40 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Use user-specified LIBS for configure tests, which is
	  what's expected, and provides a way for the user to tell configure
	  where to find library functions which configure can't find for
	  itself.

Thu Dec 20 22:07:19 GMT 2012  Olly Betts <olly@survex.com>

	* api/compactor.cc,api/replication.cc,backends/brass/,backends/chert/,
	  common/,net/remoteconnection.cc: Rename msvc_posix_rename(), etc to
	  posixy_rename() (avoid a posix_ prefix as that's used by some library
	  functions, and these aren't necessarily 100% POSIX compatible), and
	  provide macro versions on Unix, so we can avoid a #ifdef at every
	  call site.

Thu Dec 20 20:57:18 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: socketpair() needs -lnetwork on Haiku.

Thu Dec 20 02:30:12 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc,
	  backends/chert/chert_databasereplicator.cc: Simplify how we open the