@@ -1,3 +1,7 @@
+Fri Dec 21 03:32:13 GMT 2012  Olly Betts <olly@survex.com>
+
+	* tests/api_replicate.cc: Use O_BINARY in replication tests.
+
 Fri Dec 21 03:24:37 GMT 2012  Olly Betts <olly@survex.com>
 
 	* common/replicate_utils.cc: Make posixy_open() always use O_BINARY.
